--- a/argocd/app-argo-rollouts.yaml
+++ b/argocd/app-argo-rollouts.yaml
@@ -13,5 +13,7 @@ spec:
     targetRevision: main
   project: default
   syncPolicy:
+    automated:
+      prune: true
     syncOptions:
       - CreateNamespace=true
