--- a/argocd/app-argocd.yaml
+++ b/argocd/app-argocd.yaml
@@ -13,5 +13,7 @@ spec:
     targetRevision: main
   project: default
   syncPolicy:
+    automated:
+      prune: true
     syncOptions:
       - CreateNamespace=true
