--- a/demo/service.yaml
+++ b/demo/service.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: web
 spec:
   selector:
-    app: nginx
+    app: web
   ports:
-  - port: 80
-    targetPort: http
+    - port: 80
+      targetPort: http
