--- a/demo/deployment.yaml
+++ b/demo/deployment.yaml
@@ -14,6 +14,7 @@ spec:
       containers:
         - name: web
           image: docker.io/nginx:alpine3.18-slim
+          # image: docker.io/httpd:2.4.58-alpine
           ports:
             - containerPort: 80
               name: http
