--- a/demo/kustomization.yaml
+++ b/demo/kustomization.yaml
@@ -5,5 +5,6 @@ resources:
   - deployment.yaml
   # Argo rollouts
   # - analysis.yaml
-  # - rollout.yaml
-  # - service-preview.yaml
+  - rollout.yaml
+  - service-preview.yaml
+  - ingress-preview.yaml
