--- a/demo/ingress-preview.yaml
+++ b/demo/ingress-preview.yaml
@@ -6,7 +6,7 @@ metadata:
     name: demo
 spec:
   rules:
-    - host: demo.kubefest.com
+    - host: demo-preview.kubefest.com
       http:
         paths:
           - pathType: Prefix
