move to workload

--- a/demo/kustomization.yaml
+++ b/demo/kustomization.yaml
@@ -1,7 +1,7 @@
 namespace: demo
 resources:
+  - ingress-preview.yaml
   - ingress.yaml
+  - service-preview.yaml
   - service.yaml
   - workload.yaml
-  # - service-preview.yaml
-  # - ingress-preview.yaml
