--- a/demo/workload.yaml
+++ b/demo/workload.yaml
@@ -1,7 +1,7 @@
-apiVersion: apps/v1
-kind: Deployment
-# apiVersion: argoproj.io/v1alpha1
-# kind: Rollout
+# apiVersion: apps/v1
+# kind: Deployment
+apiVersion: argoproj.io/v1alpha1
+kind: Rollout
 metadata:
   name: web
 spec:
@@ -21,7 +21,7 @@ spec:
           ports:
             - containerPort: 80
               name: http
-  # strategy:
-  #   blueGreen:
-  #     activeService: web
-  #     previewService: web-preview
+  strategy:
+    blueGreen:
+      activeService: web
+      previewService: web-preview
