--- a/demo/workload.yaml
+++ b/demo/workload.yaml
@@ -16,8 +16,8 @@ spec:
     spec:
       containers:
         - name: web
-          image: docker.io/nginx:alpine3.18-slim
-          # image: docker.io/httpd:2.4.58-alpine
+          # image: docker.io/nginx:alpine3.18-slim
+          image: docker.io/httpd:2.4.58-alpine
           ports:
             - containerPort: 80
               name: http
