--- a/demo/workload.yaml
+++ b/demo/workload.yaml
@@ -25,3 +25,5 @@ spec:
     blueGreen:
       activeService: web
       previewService: web-preview
+      autoPromotionEnabled: false
+      # previewReplicaCount: 1
