--- a/demo/workload.yaml
+++ b/demo/workload.yaml
@@ -1,7 +1,7 @@
-# apiVersion: apps/v1
-# kind: Deployment
-apiVersion: argoproj.io/v1alpha1
-kind: Rollout
+apiVersion: apps/v1
+kind: Deployment
+# apiVersion: argoproj.io/v1alpha1
+# kind: Rollout
 metadata:
   name: web
 spec:
@@ -21,27 +21,21 @@ spec:
           ports:
             - containerPort: 80
               name: http
-  strategy:
-    blueGreen:
-      activeService: web
-      previewService: web-preview
-      autoPromotionEnabled: true # ojo
-      activeMetadata:
-        labels:
-          role: active
-      previewMetadata:
-        labels:
-          role: preview
-      previewReplicaCount: 1
-      prePromotionAnalysis:
-        templates:
-          - templateName: job
-        args:
-          - name: service-name
-            value: web-preview.demo.svc.cluster.local
-      postPromotionAnalysis:
-        templates:
-          - templateName: job
-        args:
-          - name: service-name
-            value: web.demo.svc.cluster.local
+  # strategy:
+  #   blueGreen:
+  #     activeService: web
+  #     previewService: web-preview
+  #     autoPromotionEnabled: true # ojo
+  #     previewReplicaCount: 1
+  #     prePromotionAnalysis:
+  #       templates:
+  #         - templateName: job
+  #       args:
+  #         - name: service-name
+  #           value: web-preview.demo.svc.cluster.local
+  #     postPromotionAnalysis:
+  #       templates:
+  #         - templateName: job
+  #       args:
+  #         - name: service-name
+  #           value: web.demo.svc.cluster.local
