--- a/demo/workload.yaml
+++ b/demo/workload.yaml
@@ -25,7 +25,7 @@ spec:
     blueGreen:
       activeService: web
       previewService: web-preview
-      autoPromotionEnabled: false # ojo
+      autoPromotionEnabled: true # ojo
       previewReplicaCount: 1
       prePromotionAnalysis:
         templates:
